tests/regression/error/hw5_error13.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],stmts=[ST_RETURN {exp=SOME (EXP_NUM 2)}]}
  : program
;
